# rizoner

./: .flake8  LICENSE  README.md  conftest.py  db.sqlite3  manage.py  pyproject.toml  pytest.ini
.agents/rules/: calling-llms.md  endpoint-tests.md  http-api.md  package-to-use-for-cli-comamnds.md  python-env-manager.md  rizui-app.md  test-tools.md  type-checks.md  type-hints.md  ui-backend-interactions.md
ai_models/: admin.py  apps.py  models.py
ai_models/migrations/: 0001_initial.py
configuration/: admin.py  api.py  models.py  tests.py
configuration/migrations/: 0001_initial.py
configuration/tests/: test_api.py
rizoner/: asgi.py  settings.py  urls.py  wsgi.py
statement/: admin.py  api.py  apps.py  models.py
statement/migrations/: 0001_initial.py  0002_thread.py  0003_statement_thread.py  0004_log.py  0005_statement_is_main.py
statement/tests/: test_api.py
user_interface/: apps.py  backend_logic.py  test_backend_logic.py  tests.py
user_interface/management/commands/: rizui.py
